# foamgci

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README (1).md  T  data.py  fvSchemes  oblique_shock.py  p
examples/diamond2D_Ma2/: README.md  submit.sh
examples/diamond2D_Ma2/0/: T  U  p
examples/diamond2D_Ma2/gci/: analyze.py  compute_entropy.py  data.py  extract_snapshot.py  gci_summary.json  make_figures.py  run_all.sh  shock_expansion.py
examples/diamond2D_Ma2/gci/data/: README.txt
examples/diamond2D_Ma2/system/: blockMeshDict  controlDict
examples/forwardstep_mach3/: README.md  submit.sh  verify_abstract.py
examples/forwardstep_mach3/0/: T  U  p
examples/forwardstep_mach3/data/: README.md
examples/forwardstep_mach3/gci/: analyze.py  data.py  extract_snapshot.py  gci.py  gci_summary.json  make_aux_figures.py  make_contour_figure.py  make_figures.py  parse_fieldminmax.py  run_all.sh
examples/forwardstep_mach3/gci/data/: README.md
examples/forwardstep_mach3/system/: blockMeshDict  controlDict  decomposeParDict
examples/wedge15Ma5/: README.md
examples/wedge15Ma5/0/: T  U
examples/wedge15Ma5/gci/: analyze.py  data.py  gci_summary.json  make_figures.py  oblique_shock.py  run_all.sh
examples/wedge15Ma5/system/: blockMeshDict  controlDict  decomposeParDict
foamgci/: __init__.py  __main__.py  _version.py  gci.py  plot.py  reader.py  report.py  stats.py
tests/: __init__.py  test_cli.py  test_gci.py  test_reader.py  test_report.py  test_stats.py  test_stats_statsmodels.py
(+5 files in other folders)
