[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamgci"
dynamic = ["version"]
description = "Verification utilities for unsteady CFD: Roache GCI, autocorrelation-corrected SEM, KPSS stationarity, OpenFOAM fieldMinMax parsing, and generic scalar time-series input."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rithik R Nambiar" }]
requires-python = ">=3.10"
keywords = ["CFD", "OpenFOAM", "verification", "GCI", "Roache", "KPSS", "autocorrelation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
test = ["pytest>=7"]
dev  = ["pytest>=7", "matplotlib>=3.5"]

[project.scripts]
foamgci = "foamgci.__main__:main"

[project.urls]
Homepage = "https://github.com/rithikrn/foamgci"
Issues   = "https://github.com/rithikrn/foamgci/issues"
Source   = "https://github.com/rithikrn/foamgci"

[tool.setuptools.dynamic]
version = { attr = "foamgci._version.__version__" }

[tool.setuptools.packages.find]
include = ["foamgci*"]
exclude = ["tests*", "examples*"]
